--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,6 @@ button {
   padding-bottom: 95px;
   background: url(/images/bg_tools.png) no-repeat bottom center;
   background-size: cover;
-
 }
 .tools__items {
   display: flex;
@@ -301,7 +300,6 @@ button {
   background: url(/images/Bg-team.svg) no-repeat top center;
   background-size: cover;
   margin-bottom: 36px;
-
 }
 .team__inner {
   padding: 230px 0 380px;
@@ -352,10 +350,10 @@ button {
   white-space: nowrap;
 }
 
-.team__item-text.team__item-text--left{
-    right: auto;
-    top: -41px;
-    left: 62px;
+.team__item-text.team__item-text--left {
+  right: auto;
+  top: -41px;
+  left: 62px;
 }
 
 .team__item-text--right::after,
@@ -387,11 +385,9 @@ button {
   left: 30px;
 }
 .team__item-text--left::before {
-
-    bottom: -16px;
-    left: 16px;
+  bottom: -16px;
+  left: 16px;
 }
-
 
 .team__box {
   text-align: center;
@@ -416,25 +412,161 @@ button {
   border-radius: 4px;
 }
 
-
 .marketing {
-    padding: 30px 0 120px;
- }
+  padding: 30px 0 120px;
+}
 .marketing__title {
-    font-size: 34px;
-    line-height: 51px;
-    font-weight: 700;
-    margin-bottom: 9px;
- }
+  font-size: 34px;
+  line-height: 51px;
+  font-weight: 700;
+  margin-bottom: 9px;
+}
 .marketing__subtitle {
-    color: #544837;
-    margin-bottom: 55px;
+  color: #544837;
+  margin-bottom: 55px;
 }
 
-.marketing__subtitle { }
-.slider { }
-.slider__item { }
-.slider__item-img { }
-.slider__item-info { }
-.slider__item-author { }
-.slider__item-title { }
+.marketing__subtitle {
+}
+.slider {
+  margin: 0 -20px;
+}
+.slider__item {
+  padding: 0 20px;
+}
+.slider__item-img {
+  width: 348px;
+  height: 185px;
+  object-fit: cover;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  margin-bottom: 25px;
+}
+.slider__item-info {
+  margin-bottom: 12px;
+  line-height: 28px;
+}
+.slider__item-author {
+  font-weight: 700;
+  color: #544837;
+}
+.slider__item-title {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 34px;
+  transition: all 0.3s;
+  display: inline-block;
+  margin-bottom: 84px;
+}
+.slider__item-title:hover {
+  color: #ff9900;
+}
+.slick-dots {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+}
+.slick-dots button {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  border: none;
+  font-size: 0;
+  padding: 0;
+  background-color: #efefef;
+  margin: 0 5px;
+}
+.slick-dots .slick-active button {
+  background-color: #ff9900;
+}
+
+.footer {
+}
+.footer__inner {
+  padding: 105px 0 100px;
+  border-top: 1px solid rgba(188, 208, 229, 0.49);
+  display: flex;
+  justify-content: space-between;
+}
+.logo {
+}
+.logo__img {
+}
+.footer__menu {
+  width: 132px;
+}
+.footer__menu-title,
+.footer__form-text {
+  margin-bottom: 35px;
+  font-size: 20px;
+  line-height: 30px;
+  color: #2f281e;
+  font-weight: 700;
+}
+.footer__list {
+}
+.footer__list-item {
+}
+.footer__menu-link {
+  color: #544837;
+  font-size: 16px;
+  line-height: 35px;
+}
+.footer__form {
+  width: 330px;
+}
+
+.footer__form-input {
+  width: 100%;
+  padding-left: 15px;
+  height: 48px;
+  border: 1px solid #bcd0e5;
+  border-radius: 4px;
+  margin-bottom: 21px;
+  display: inline-block;
+}
+.footer__form-input::placeholder {
+  color: #bcd0e5;
+  font-size: 16px;
+  line-height: 28px;
+}
+.footer__form-btn {
+  border: none;
+  padding: 8px 16px;
+  font-weight: 700;
+  line-height: 24px;
+  font-size: 16px;
+  background-color: #ff9900;
+  color: #fff;
+  border-radius: 4px;
+}
+.menu__burger {
+  width: 40px;
+  height: 30px;
+  display: none;
+}
+.menu__burger span {
+  display: block;
+  height: 2px;
+  width: 100%;
+  background-color: #173456;
+  position: absolute;
+  left: 0;
+  top: 14px;
+}
+.menu__burger::after,
+.menu__burger::before {
+  content: '';
+  position: absolute;
+  height: 2px;
+  width: 40px;
+  background-color: #173456;
+  left: 0;
+}
+
+.menu__burger::before {
+  top: 0;
+}
+.menu__burger::after {
+  bottom: 0;
+}
